--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "immer": "^10.0.2",
     "lottie-react-native": "^6.2.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "^0.72.4",
     "react-native-linear-gradient": "^2.8.2",
