--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "^0.72.4",
+    "react-native-credit-card": "^0.1.9",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
